--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     },
     "require": {
-        "php": "^7.4|^8.0|^8.1|^8.2",
-        "laravel/framework": "^8.0|^9.0|^10.0"
+        "php": "^7.4|^8.0|^8.1|^8.2|^8.3",
+        "laravel/framework": "^8.0|^9.0|^10.0|^11.0"
     }
 }
